# halo

./: .clang-format  .gitattributes  .gitignore  .rgignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Dockerfile  FunctionSizes  HANDOVER.md  README.md  RE_IMPLEMENTATION_STATUS.md  badge.json  ci.html  ci_summary.json  common.h  history.json  history.json.deploy  kb.json  kb_meta.json  mizuchi.yaml  objdiff.json  requirements.txt  test_harness_architecture.md  xemu-screenshot.ppm
.agents/: mcp_config.json
.agents/skills/: halo-build-xemu  halo-deploy-xbdm  halo-page-fault  halo-re-lift  halo-verify-debug  halo-xbdm  halo-xbox-re
.claude/: settings.json
.claude/agents/: xbox-halo-debugger.md  xbox-halo-lift-reviewer.md  xbox-halo-re-analyst.md
.claude/commands/: analyze_screenshot.md  auto-lift.md  bug-hunt.md  build.md  classify-common.md  clear-cache.md  debug-regression.md  debug.md  delink.md  deploy.md  frontier.md  fun-pipeline.md  goal-lift.md  lift-verify.md  lift.md  load-iso.md  maintain.md  permuter-campaign.md  prior-fixes.md  retrieval-refresh.md  review-deep.md  verify-all.md  verify-option3.md  verify.md  xbdm-continue.md  xbdm-debug.md  xbdm-dirlist.md  xbdm-getcontext.md  xbdm-getextcontext.md  xbdm-getfileattributes.md  xbdm-getmem.md  xbdm-halt.md  xbdm-isstopped.md  xbdm-modsections.md  xbdm-modules.md  xbdm-threadinfo.md  xbdm-threads.md  xbdm-walkmem.md  xbdm.md  xemu.md
.claude/skills/: SKILLS.md  qmd
.claude/workflows/: goal-lift.js  mass-lift.js
.githooks/: README.md  post-checkout  pre-commit  prepare-commit-msg
.github/workflows/: equivalence.yml  main.yml  progress-report.yml  runtime-oracle.yml  snapshot-tests.yml
.opencode/agents/: oracle.md  xbox-halo-lift-reviewer.md  xbox-halo-re-analyst.md
.opencode/commands/: analyze_screenshot.md  auto-lift.md  bug-hunt.md  build.md  capture-input.md  ci.md  claer-cache.md  cleanup.md  clear-cache.md  debug-regression.md  debug.md  delink.md  deploy.md  frontier.md  fun-pipeline.md  goal-lift.md  handover.md  lift-deep.md  lift-mizuchi.md  lift-verify.md  lift.md  load-iso.md  load-xemu-with-iso.md  maintain.md  permuter-campaign.md  reintegrate-to-main.md  replay-input.md  retrieval-refresh.md  review-deep.md  verify-all.md  verify-option3.md  verify.md  xbdm-continue.md  xbdm-debug.md  xbdm-dirlist.md  xbdm-getcontext.md  xbdm-getextcontext.md  xbdm-getfile.md  xbdm-getfileattributes.md  xbdm-getmem.md  (+9 more)
.opencode/plugins/: halo-memory-router.js
.rtk/: filters.toml
agent-content/commands/: auto-lift.md  debug-regression.md  deploy.md  frontier.md  lift-mizuchi.md  lift-verify.md  lift.md  retrieval-refresh.md  xbdm-continue.md  xbdm-debug-txt.md  xbdm-debug.md  xbdm-dirlist.md  xbdm-getmem.md  xbdm-modules.md  xbdm-threadinfo.md  xbdm-threads.md  xbdm-walkmem.md  xbdm.md  xemu.md
artifacts/: handover_bipeds_dormant_2026-06-10.md
artifacts/auto_lift/: HANDOVER_hud_obj.md  goal_progress.md
artifacts/batch_verify/: results.csv  summary.json
artifacts/parked/: FUN_00193c00.json  collision_surface_area.json  collision_surface_edge_count.json  collision_surface_perimeter.json  collision_surface_test_line2d.json
artifacts/snapshots/: README.md  d1f40_synthetic.json
build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  halo
build_debug/src/: Makefile  cmake_install.cmake
ci/: snapshot.json
delinked/: manifest.json
docs/: HISTORICAL_TRACKING_PLAN.md  INDEX.md  ab-trajectory-testing.md  agent-content.md  agent_workflow.md  assertion_tripwire.md  auto-discover.md  boot-init-and-checkpoints.md  cryo-tech-no-move-handoff.md  debug-commands-keyboard.md  equivalence-bulk-snapshots-plan.md  equivalence-testing.md  ghidra-live-delinker-mcp.md  ghidra-live-delinker-workflow.md  ghidra-live-delinker.md  halorec-timeseries-leverage.md  handover-0xA0001-resolved-rogue-runner-and-0x1b0630.md  handover-a10-grunt-aim-passive.md  handover-a10-grunt-passive-actor-moving.md  handover-bipeds-dormant-activation.md  handover-bipeds-dormant.md  handover-model-strategy.md  handover-rasterizer-tgd-cyan-core.md  handover-rocket-collision-regression.md  handover-viewer-lean-ai-recording.md  input-fixture-capture.md  lift-learnings.md  lift-policy.md  lift_pipeline.md  missing-hud-score-text-primer.md  networking_system_link_bug.md  opencode-ghidra.md  permuter-adapter.md  plasma-orb-bug.md  progress-report-implementation.md  progress-reporting.md  repository-artifact-cleanup.md  seh-handling.md  self-hosted-runner-setup.md  snapshot-verification.md  (+6 more)
docs/bugs/: f9-error-reset-crash.md  mp-endgame-freeze.md  nan-object-lighting-crash.md  plasma-animation-phase-discontinuity.md  texture-cache-corruption.md
ghidra_scripts/: ApplyPalCorroboration.java  ExportFunctionSizes.java  RenameFromKB.java  TextSectionCoverage.java
notes/: agent-context.md  decompilation_survey_notes.md  decompilation_survey_notes_part2.md  decompilation_survey_notes_part3.md  decompilation_survey_notes_part4.md  halo_ce_original_xbox_bugs_and_glitches.md  known_bugs.md  test_plan.md
progress/: badge.json  ci.html  ci_summary.json  history.json  history.json.deploy  index.html
src/: CMakeLists.txt  common.h  entrypoint.c  inlines.c  inlines.h  types.h  x87_math.h  xbox.h  xboxkrnl.exe.def  xdk_common.h  xdk_rt.c
src/halo/: common.c  shell.c  (+2 more)
toolchains/: llvm.cmake
tools/: _inject_1430_dualoracle.py  asserts.gdb  audit_agent_content.py  audit_reg_abi.py  batch_delink.py  boot.sh  boot_hash.sh  build.py  build_and_iso.py  build_deploy_run.sh  build_hash.py  build_iso.py  check_agent_docs.py  check_asm_thunk_conflicts.py  check_gen_hash.py  check_ghidra_mcp.py  check_lift_hazards.py  check_raw_casts.py  check_requirements.py  classify_common.py  classify_unknown.py  collect_verify_payload.py  color.py  compare_obj.py  deploy_xbox.py  export_delinked_object.py  extract_pal_prototype_symbols.py  frontier.py  frontier_report.sh  gen-build-info.py  gen-struct-checks.py  generate_lift_commit.py  ghidra-live-mcp.sh  kb_meta.py  kb_reg_baseline.json  knowledge.py  lift_pipeline.py  llm_auto_lift.py  local_env.py  maintain.py  (+29 more)
(+864 files in other folders)
